[package]
name = "luna"
version = "0.1.0"
edition = "2024"
authors = ["flowerinthenight <root@flowerinthenight.com>"]
description = "Nothing to see here."
license = "Apache-2.0"
repository = "https://github.com/flowerinthenight/luna"

[dependencies]
memchr = "2.7"
clap = { version = "4.5.47", features = ["derive"] }
hedge_rs = "0.2.4"
anyhow = "1.0.99"
ctrlc = "3.5.0"
env_logger = "0.11.8"
log = "0.4.28"
scopeguard = "1.2.0"
duckdb = { version = "1.3.2", features = ["bundled"] }
# Try to sync with duckdb-rs version due to mem::transmute.
arrow = "55.2.0"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"
arrow-ipc = "55.2.0"
num_cpus = "1.17.0"
async-channel = "=2.5.0"
tokio = { version = "1.47.1", features = ["full"] }
# We don't depend on rustls, but it's panicking without this.
# https://github.com/rustls/rustls/issues/1938
rustls = { version = "0.23.31", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
