[workspace]
resolver = "3"
members = ["luna"]

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["flowerinthenight <root@flowerinthenight.com>"]
license = "Apache-2.0"
repository = "https://github.com/flowerinthenight/luna"

[workspace.dependencies]
anyhow = "1.0.100"
# Try to sync arrow* with duckdb-rs' arrow version for mem::transmute.
arrow = "56.1.0"
arrow-array = "56.1.0"
arrow-ipc = "56.1.0"
arrow-schema = "56.1.0"
async-channel = "=2.5.0"
bcrypt = "0.17.1"
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.5.0"
duckdb = { version = "1.4.0", features = ["bundled"] }
env_logger = "0.11.8"
hedge_rs = "0.2.9"
log = "0.4.28"
memchr = "2.7"
num_cpus = "1.17.0"
# We don't depend directly on rustls, but it's panicking without this.
# Reference: https://github.com/rustls/rustls/issues/1938
rustls = { version = "0.23.32", default-features = false, features = ["ring", "logging", "std", "tls12"] }
scopeguard = "1.2.0"
tokio = { version = "1.47.1", features = ["full"] }
