[package]
name = "luna"
description = "In-memory OLAP SQL server for object storage data."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
memchr = { workspace = true }
clap = { workspace = true }
hedge_rs = { workspace = true }
anyhow = { workspace = true }
ctrlc = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
scopeguard = { workspace = true }
duckdb = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
num_cpus = { workspace = true }
async-channel = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
