[package]
name = "luna"
description = "In-memory OLAP SQL server for object storage data."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
async-channel = { workspace = true }
bcrypt = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
duckdb = { workspace = true }
env_logger = { workspace = true }
hedge_rs = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
num_cpus = { workspace = true }
rustls = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true }
